<resources>
    <string name="app_name">taskMaster</string>
    <string name="my_tasks">My Tasks</string>
    <string name="add_task">ADD TASK</string>
    <string name="all_tasks">ALL TASKS</string>
    <string name="do_something">Do Something</string>
    <string name="my_task">My Task</string>
    <string name="textview">TextView</string>
    <string name="name">Name</string>
    <string name="task_title">Task title</string>
    <string name="task_description">Task Description</string>
    <string name="total_tasks">Total Tasks :</string>
    <string name="all_tasks1">All Tasks</string>
    <string name="taskmaster">TaskMaster</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>